test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/5_limit/EXCEED_PARAM_LIMIT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="EXCEED_PARAM_LIMIT" } }
function f(a:int32, a2:int32, a3:int32, a4:int32, a5:int32, a6:int32, a7:int32, a8:int32, a9:int32):void
{
}
